# macOS-incident-compiler

./: Cargo.toml  README.md  SMOKE_UP_COMMAND.md
crates/agent-macos/: Cargo.toml
crates/agent-macos/src/: capture_macos_rotating.rs  lib.rs  macos_ingest.rs  macos_native_playbooks.rs  macos_stubs.rs  main.rs  mock.rs  mod.rs  slot_engine.rs
crates/agent-macos/src/platform/: api.rs  bsm_parser.rs  db_schema.rs  enricher.rs  evidence.rs  explain.rs  explainer.rs  facts.rs  incidents.rs  integration_tests.rs  macos_fact_extractors.rs  macos_fact_extractors_es.rs  mod.rs  narrative.rs  playbooks.rs  slot_engine.rs  state_machine.rs  synthetic_pipeline_tests.rs
crates/agent-macos/src/sensors/: hash_keys.rs  mod.rs  wiring_tests.rs
crates/agent-macos/src/sensors/bsm/: bsm_archive_tool_exec.rs  bsm_auth_event.rs  bsm_composite_detectors.rs  bsm_cred_access.rs  bsm_defense_evasion.rs  bsm_discovery_exec.rs  bsm_exec.rs  bsm_file_ops.rs  bsm_fs_ops.rs  bsm_helpers.rs  bsm_net_connect.rs  bsm_network.rs  bsm_persistence_change.rs  bsm_priv_escalation.rs  bsm_process_injection.rs  bsm_reader.rs  bsm_script_exec.rs  bsm_staging_write.rs  bsm_tokens.rs  extract.rs  mod.rs  parsers.rs
crates/agent-macos/src/sensors/es/: es_client.rs  extract.rs  file_create.rs  file_metadata.rs  file_open.rs  file_rename.rs  file_unlink.rs  file_write.rs  identity.rs  mod.rs  mounts.rs  parsers.rs  proc_exec.rs  proc_lifecycle.rs
crates/core/src/: lib.rs
crates/edrctl/: Cargo.toml
crates/edrctl/src/: main.rs
crates/locald/: Cargo.toml
crates/locald/src/: hypothesis_controller.rs  lib.rs  main.rs  (+1 more)
crates/server/: Cargo.toml
playbooks/macos/: launch_agent_persistence.yaml  osascript_suspicious.yaml  pb_launch_agent_persistence.yaml  pb_osascript_suspicious.yaml  pb_proc_exec_basic.yaml  pb_user_writable_exec_egress.yaml  signal_agent_tamper.yaml  signal_browser_cred_access.yaml  signal_consensus_escalation.yaml  signal_dyld_injection.yaml  signal_exec_from_writable.yaml  signal_high_conn_rate.yaml  signal_interpreter_writable.yaml  signal_launch_agent_write.yaml  signal_launchd_plist_write.yaml  signal_log_wipe.yaml  signal_lolbin_abuse.yaml  signal_new_remote_ip.yaml  signal_persistence_delta.yaml  signal_sensitive_file_read.yaml  signal_suspicious_keychain.yaml  signal_tcc_db_access.yaml  sudo_anomaly.yaml  user_writable_exec_egress.yaml
src-tauri/src/: supervisor.rs
(+14 files in other folders)
