[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/workbench",
    "crates/server",
    "crates/locald",
    "crates/agent-macos",
    "crates/edrctl",
]

# Default members to build
default-members = [
    "crates/core",
    "crates/workbench",
    "crates/server",
    "crates/locald",
    "crates/agent-macos",
    "crates/edrctl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jbaker07/macos-incident-compiler"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
