[package]
name = "agent-macos"
version = "0.1.0"
edition = "2021"
description = "macOS capture agent using BSM/EndpointSecurity"

[lib]
name = "agent_macos"
path = "src/lib.rs"

[[bin]]
name = "agent-macos"
path = "src/main.rs"

[[bin]]
name = "capture_macos_rotating"
path = "src/bin/capture_macos_rotating.rs"

[dependencies]
edr-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
ctrlc = "3.4"

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
nix = { version = "0.30.1", features = ["uio", "process"] }
