[package]
name = "edrctl"
version = "0.1.0"
edition = "2021"
description = "EDR stack orchestrator - one command to rule them all"

[[bin]]
name = "edrctl"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
dirs = "5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
